@@ -1937,6 +1937,21 @@ static const char *FxOperatorPrecedence(const char *expression,
       case 'A':
       case 'a':
       {
+        if (LocaleNCompare(expression,"acosh",5) == 0)
+          {
+            expression+=5;
+            break;
+          }
+        if (LocaleNCompare(expression,"asinh",5) == 0)
+          {
+            expression+=5;
+            break;
+          }
+        if (LocaleNCompare(expression,"atanh",5) == 0)
+          {
+            expression+=5;
+            break;
+          }
         if (LocaleNCompare(expression,"atan2",5) == 0)
           {
             expression+=5;
@@ -2368,6 +2383,12 @@ static MagickRealType FxEvaluateSubexpression(FxInfo *fx_info,
             exception);
           return((MagickRealType) fabs((double) alpha));
         }
+      if (LocaleNCompare(expression,"acosh",5) == 0)
+        {
+          alpha=FxEvaluateSubexpression(fx_info,channel,x,y,expression+5,beta,
+            exception);
+          return((MagickRealType) acosh((double) alpha));
+        }
       if (LocaleNCompare(expression,"acos",4) == 0)
         {
           alpha=FxEvaluateSubexpression(fx_info,channel,x,y,expression+4,beta,
@@ -2385,6 +2406,12 @@ static MagickRealType FxEvaluateSubexpression(FxInfo *fx_info,
           return(gamma*gamma);
         }
 #endif
+      if (LocaleNCompare(expression,"asinh",5) == 0)
+        {
+          alpha=FxEvaluateSubexpression(fx_info,channel,x,y,expression+5,beta,
+            exception);
+          return((MagickRealType) asinh((double) alpha));
+        }
       if (LocaleNCompare(expression,"asin",4) == 0)
         {
           alpha=FxEvaluateSubexpression(fx_info,channel,x,y,expression+4,beta,
@@ -2402,6 +2429,12 @@ static MagickRealType FxEvaluateSubexpression(FxInfo *fx_info,
           alpha=FxEvaluateSubexpression(fx_info,channel,x,y,expression+5,beta,
             exception);
           return((MagickRealType) atan2((double) alpha,(double) *beta));
+        }
+      if (LocaleNCompare(expression,"atanh",5) == 0)
+        {
+          alpha=FxEvaluateSubexpression(fx_info,channel,x,y,expression+5,beta,
+            exception);
+          return((MagickRealType) atanh((double) alpha));
         }
       if (LocaleNCompare(expression,"atan",4) == 0)
         {
